# ainex

./: .dockerignore  .env.backup  .env.bak  .env.bak_1764892038  .env.bak_v3  .env.example  .env.production  .gitignore  AGENTS.md  AINEX_Architectural_Comparison.md  App.tsx  App.tsx.backup  CERTIFICATION_ACHIEVED.md  CHIEF_ARCHITECT_STAND.md  COMMANDER_BRIEFING.md  DEPLOYMENT.md  DEPLOYMENT_BLUEPRINT.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_PHASES.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  Dockerfile.agents  Dockerfile.api  Dockerfile.production  ENTERPRISE_PREFLIGHT_SPEC.md  ENTERPRISE_TIER_SPECIFICATIONS.md  FINAL_DEPLOYMENT_STATUS.md  FIX_NEEDED.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY.txt  PHASE_FLOW_VISUAL.md  PROFIT_GENERATION_MODE.md  QUICK_START_DEPLOY.md  README.md  SETUP_GUIDE.md  TODO.md  clean-env.ps1  constants.ts  create_change_and_push.sh  (+65 more)
aineon-enterprise/: $null  .dockerignore  .env.example  .gitignore  .render.yaml  .renderignore  .rendignore  .vercelignore  AINE  AINEON  AINEONAGENT_PROMPT.md  AINEON_ARCHITECTURE_ANALYSIS.md  AINEON_BLOCKCHAIN_VALIDATION_REPORT.md  AINEON_CHIEF_ARCHITECT_LIVE_ANALYSIS.md  AINEON_COLOR_CODED_ACTION_PLAN.md  AINEON_COMPLETE_4_PHASE_IMPLEMENTATION.md  AINEON_DASHBOARD_ARCHITECTURE_ANALYSIS_REPORT.md  AINEON_DASHBOARD_DEPLOYMENT_COMPLETE.md  AINEON_DASHBOARD_ELITE_TIER_ANALYSIS.md  AINEON_DEPLOYMENT_COMPLETE.txt  AINEON_ELITE  AINEON_ELITE_TIER_COMPLETION_REPORT.md  AINEON_ELITE_TIER_NETWORK_CLIENT_ANALYSIS.md  AINEON_ENGINE_DNA.md  AINEON_ENTERPRISE_EXECUTION_PLAN.md  AINEON_ETHERSCAN_PROFIT_VALIDATION.json  AINEON_FINAL_MISSION_PLAN.md  AINEON_FINAL_VALIDATION_SUMMARY.md  AINEON_GASLESS_MODE_FINAL_REPORT_CORRECTED.md  AINEON_LIVE_DEPLOYMENT_BLUEPRINT.md  AINEON_LIVE_DEPLOYMENT_COMPLETE.json  AINEON_LIVE_DEPLOYMENT_VALIDATION_REPORT.md  AINEON_MASTER_BLUEPRINT_SPECIFICATION.md  AINEON_MASTER_DASHBOARD_ANALYSIS.md  AINEON_MISSING_FEATURES_GAP_ANALYSIS.md  AINEON_OFFICIAL_REPORTS_VALIDATION_ANALYSIS.md  AINEON_OPTIMIZED_NETWORK_CLIENT_ANALYSIS.md  AINEON_PERFORMANCE_SCORE_CLARIFICATION.md  AINEON_PHASE_1_REAL_TIME_INFRASTRUCTURE_COMPLETION.md  AINEON_PHASE_2_ADVANCED_EXECUTION_COMPLETION.md  (+284 more)
aineon-enterprise/.github/workflows/: ci-cd-pipeline.yml  ci.yml  deploy.yml  security.yml
aineon-enterprise/ELITE/: AINEON_ANALYTICS_SIDEBAR_COMPLETE.md  AI_TERMINAL_SETUP_GUIDE.md  ELITE_IMPLEMENTATION_COMPLETE.md  aineon_analytics_sidebar_complete.py  aineon_analytics_sidebar_component.html  aineon_elite_cyberpunk_ai_dashboard.py  aineon_elite_cyberpunk_dashboard.py  aineon_elite_launcher.py  aineon_elite_master_dashboard.py  aineon_elite_validation_suite.py  requirements_ai.txt
aineon-enterprise/PRODUCTION/: README_PRODUCTION.md  live_trading_engine.py
aineon-enterprise/SHARED/: live_market_data.py
aineon-enterprise/SIMULATION/: README_SIMULATION.md  paper_trading_engine.py
aineon-enterprise/aineon-dashboard/: DEPLOYMENT_BRIEFING.md  Dockerfile  README.md  deploy.sh  error_handler.py  package.json  phase4-files.sh  render.yaml  requirements.txt  user_friendly_dashboard.py
aineon-enterprise/aineon-dashboard-enterprise/src/: App.js
aineon-enterprise/api/: index.py  withdrawal_api.py
aineon-enterprise/archive/: README.md
aineon-enterprise/backend/: create_super_admin.py  production_api.py  requirements.txt
aineon-enterprise/backend/app/: config.py  crud.py  main.py  models.py  schemas.py  security.py
aineon-enterprise/cache/: .cache_index
aineon-enterprise/config/: development.env  docker-compose.yml  requirements.txt
aineon-enterprise/core/: advanced_caching_system.py  ai_optimizer.py  ai_optimizer_parallel.py  ai_optimizer_production.py  aineon_elite_tier_orchestrator.py  aineon_unified_system.py  analyze_imports.py  audit_logger.py  auth_manager.py  auto_withdrawal.py  balancer_vault_integration.py  blockchain_connector.py  bridge_monitor.py  check_imports.py  config.py  continuous_learning_engine.py  correlation_monitor.py  cow_protocol_solver.py  curve_gauge_handler.py  deep_rl.py  deep_rl_model.py  deep_rl_optimizer.py  deployment_orchestrator.py  dex_adapter_factory.py  dex_price_fetcher.py  dex_router.py  drawdown_analyzer.py  drift_detector.py  eip1559_optimizer.py  elite_engine_enhanced.py  elite_tier_ai_optimizer.py  elite_tier_data_infrastructure.py  elite_tier_execution_engine.py  enhanced_ai_optimizer.py  enhanced_ai_optimizer_24_7.py  ensemble_predictor.py  executor_production.py  expanded_market_scanner.py  flashloan_executor.py  gpu_acceleration.py  (+56 more)
aineon-enterprise/core/ai/: __init__.py  auto_tuner.py  ml_optimizer.py
aineon-enterprise/core/bundler/: bundler_metrics.py  pimlico_bundler_client.py
aineon-enterprise/core/database/: profit_ledger.py  profit_ledger_production.py
aineon-enterprise/dashboard/: deploy-dashboard.sh  enhanced_withdrawal_dashboard.py  index.html  models.py  monitoring_dashboard.py  package.json  tailwind.config.js  ui_components.py  validators.py
aineon-enterprise/dashboards/: README.md
aineon-enterprise/docs/: AGENTS.md
aineon-enterprise/enterprise-monitoring/: deploy-enterprise.sh
aineon-enterprise/institutional-compliance/: index.html
aineon-enterprise/node_modules_backup/: .package-lock.json
aineon-enterprise/public/: dashboard.html
aineon-enterprise/scripts/: phase2_combined_validation_report.json  phase2_dashboard_validation_report.json  phase2_dashboard_validator.py  phase2_risk_validation_report.json  phase2_simulation_deployer.py  phase2_simulation_report.json  run_tests.py
aineon-enterprise/src/: App.tsx  index.css  package-lock.json  package.json
aineon-enterprise/templates/: aineon_chief_architect_dashboard.html  wallet_connect_dashboard.html
aineon-enterprise/tests/: Deployment GuardianAI Agent  test_bundler_client.py  test_circuit_breaker_module.py  test_comprehensive_suite.py  test_error_recovery.py  test_execution_engine.py  test_mev_protection.py  test_phase4_deep_learning.py  test_pimlico_integration.py  test_production_suite.py  test_rpc_failover.py
core-logic/rust-engine/: Cargo.toml
(+384 files in other folders)
