[tool.poetry]
name = "aineon-enterprise"
version = "1.1.0"
description = "Top 0.001% Enterprise Grade Flash Loan Engine"
authors = ["Aineon Enterprise Team <team@aineon.enterprise>"]
license = "Proprietary"
readme = "docs/README.md"
homepage = "https://aineon.enterprise"
repository = "https://github.com/aineon/aineon-enterprise"
documentation = "https://docs.aineon.enterprise"
keywords = ["defi", "flash-loans", "arbitrage", "trading", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.dependencies]
python = "^3.9"
# Core async and web framework
fastapi = {version = "^0.104.0", extras = ["all"]}
uvicorn = {version = "^0.24.0", extras = ["standard"]}
aiohttp = "^3.9.0"
websockets = "^12.0"

# Data processing and ML
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
tensorflow = {version = "^2.14.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"}
torch = "^2.1.0"

# Database and caching
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
alembic = "^1.12.0"
redis = {version = "^5.0.0", extras = ["hiredis"]}
psycopg2-binary = "^2.9.0"

# Monitoring and observability
prometheus-client = "^0.19.0"
opentelemetry-distro = "^0.42b0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
structlog = "^23.2.0"
jaeger-client = "^4.8.0"

# Security and encryption
cryptography = "^41.0.0"
bcrypt = "^4.0.0"
pyjwt = "^2.8.0"

# Configuration and environment
pydantic = {version = "^2.5.0", extras = ["dotenv"]}
python-dotenv = "^1.0.0"

# Development and testing
pytest = {version = "^7.4.0", optional = true}
pytest-asyncio = {version = "^0.21.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
black = {version = "^23.0.0", optional = true}
isort = {version = "^5.12.0", optional = true}
mypy = {version = "^1.6.0", optional = true}
pre-commit = {version = "^3.5.0", optional = true}
flake8 = {version = "^6.1.0", optional = true}

# Web3 and blockchain
web3 = "^6.11.0"
eth-account = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
bandit = "^1.7.0"
safety = "^2.3.0"

[tool.poetry.group.test.dependencies]
locust = "^2.17.0"
hypothesis = "^6.87.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"
mkdocstrings = {version = "^0.23.0", extras = ["python"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["aineon", "core", "dashboard"]
known_third_party = ["fastapi", "uvicorn", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "torch.*",
    "sklearn.*",
    "cvxopt.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "core/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
    "-ra",
    "--cov=core",
    "--cov=dashboard",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=95"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "chaos: Chaos engineering tests",
    "security: Security tests",
    "compliance: Compliance tests",
    "slow: Slow running tests",
    "enterprise: Enterprise-grade tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core", "dashboard"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "core/infrastructure/tests/*",
    "dashboard/tests/*",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]